feat: add D2R portfolio card, blog guides, and new:post scaffold script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "docs:dev": "vitepress dev docs --open",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "new:post": "node scripts/new-post.mjs"
   },
   "devDependencies": {
     "@sugarat/theme": "*",
