chore: ignore 构建产物/草稿，并停止追踪已提交的无关文件

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ pnpm-lock.yaml
 # VitePress
 docs/.vitepress/dist/
 docs/.vitepress/cache/
-
+docs/blog/_local/
+docs/.trash/
 # OS / Editor
 .DS_Store
 Thumbs.db
