--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev docs --open",
-    "docs:build": "vitepress build docs",
+    "docs:build": "node scripts/docs-build.mjs",
     "docs:preview": "vitepress preview docs",
     "new:post": "node scripts/new-post.mjs",
     "new:local": "node scripts/new-post-local.mjs",
