--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@sugarat/theme": "*",
     "@biomejs/biome": "^1.8.3",
+    "@sugarat/theme": "^0.5.6",
+    "@types/node": "^20.12.7",
     "sass-embedded": "^1.92.1",
     "typescript": "^5.4.5",
     "vitepress": "^1.3.4"
+  },
+  "dependencies": {
+    "commander": "^14.0.1"
   }
 }
